Refactor project structure and add project root detection in multivariate notebook

--- a/summative/linear_regression/multivariate.ipynb
+++ b/summative/linear_regression/multivariate.ipynb
@@ -55,12 +55,24 @@
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "sns.set_palette('viridis')\n",
     "\n",
-    "NOTEBOOK_DIR = Path.cwd()\n",
-    "DATA_PATH = (NOTEBOOK_DIR.parent.parent / 'data' / 'mindful_app_store.csv').resolve()\n",
-    "MODELS_DIR = (NOTEBOOK_DIR / 'models')\n",
-    "REPORTS_DIR = (NOTEBOOK_DIR / 'reports')\n",
+    "\n",
+    "def find_project_root(start: Path) -> Path:\n",
+    "    for path in [start, *start.parents]:\n",
+    "        if (path / '.git').exists() or (path / 'summative').exists():\n",
+    "            return path\n",
+    "    return start\n",
+    "\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root(Path.cwd())\n",
+    "NOTEBOOK_DIR = PROJECT_ROOT / 'summative' / 'linear_regression'\n",
+    "DATA_DIR = NOTEBOOK_DIR / 'data'\n",
+    "MODELS_DIR = NOTEBOOK_DIR / 'models'\n",
+    "REPORTS_DIR = NOTEBOOK_DIR / 'reports'\n",
+    "DATA_PATH = DATA_DIR / 'mindful_app_store.csv'\n",
+    "\n",
     "MODELS_DIR.mkdir(exist_ok=True, parents=True)\n",
     "REPORTS_DIR.mkdir(exist_ok=True, parents=True)\n",
+    "print('Using project root:', PROJECT_ROOT)\n",
     "print('Using data from:', DATA_PATH)\n",
     "raw_df = pd.read_csv(DATA_PATH)\n",
     "print('Raw shape:', raw_df.shape)\n",
@@ -380,7 +392,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
