Add new files and update multivariate regression notebook
- Created various new files in the FlutterApp's .dart_tool directory, including Favicons, Feature Engagement Tracker logs, and Network Persistent State.
- Added new database files for discounts and heavy ad intervention.
- Updated the multivariate regression notebook to improve project root detection and data path handling, ensuring compatibility with Colab and local environments.
- Enhanced error handling for missing data files with fallback candidates.

--- a/summative/linear_regression/multivariate.ipynb
+++ b/summative/linear_regression/multivariate.ipynb
@@ -46,7 +46,7 @@
     "import seaborn as sns\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.linear_model import LinearRegression, SGDRegressor\n",
+    "from sklearn.linear import LinearRegression, SGDRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -58,9 +58,17 @@
     "\n",
     "\n",
     "def find_project_root(start: Path) -> Path:\n",
+    "    \"\"\"Return repository root even when running from Colab/VS Code web.\"\"\"\n",
+    "    markers = ('.git', 'summative')\n",
     "    for path in [start, *start.parents]:\n",
-    "        if (path / '.git').exists() or (path / 'summative').exists():\n",
+    "        if any((path / marker).exists() for marker in markers):\n",
     "            return path\n",
+    "    colab_candidate = Path('/content/linear_regression_model')\n",
+    "    if (colab_candidate / 'summative').exists():\n",
+    "        return colab_candidate\n",
+    "    workspace_candidate = start / 'linear_regression_model'\n",
+    "    if (workspace_candidate / 'summative').exists():\n",
+    "        return workspace_candidate\n",
     "    return start\n",
     "\n",
     "\n",
@@ -71,13 +79,35 @@
     "REPORTS_DIR = NOTEBOOK_DIR / 'reports'\n",
     "DATA_PATH = DATA_DIR / 'mindful_app_store.csv'\n",
     "\n",
+    "if not DATA_PATH.exists():\n",
+    "    fallback_candidates = [\n",
+    "        PROJECT_ROOT / 'summative' / 'linear_regression' / 'data' / 'mindful_app_store.csv',\n",
+    "        PROJECT_ROOT / 'data' / 'mindful_app_store.csv',\n",
+    "        Path('/content/linear_regression_model/summative/linear_regression/data/mindful_app_store.csv'),\n",
+    "        Path.cwd() / 'mindful_app_store.csv',\n",
+    "    ]\n",
+    "    for candidate in fallback_candidates:\n",
+    "        if candidate.exists():\n",
+    "            DATA_PATH = candidate\n",
+    "            DATA_DIR = DATA_PATH.parent\n",
+    "            NOTEBOOK_DIR = DATA_DIR.parent\n",
+    "            MODELS_DIR = NOTEBOOK_DIR / 'models'\n",
+    "            REPORTS_DIR = NOTEBOOK_DIR / 'reports'\n",
+    "            break\n",
+    "    else:\n",
+    "        searched = '\\n'.join(str(path) for path in fallback_candidates)\n",
+    "        raise FileNotFoundError(\n",
+    "            'Could not locate mindful_app_store.csv. Please ensure the repo is cloned and run `cd linear_regression_model` before executing cells. Checked:\\n'\n",
+    "            f\"{searched}\",\n",
+    "        )\n",
+    "\n",
     "MODELS_DIR.mkdir(exist_ok=True, parents=True)\n",
     "REPORTS_DIR.mkdir(exist_ok=True, parents=True)\n",
     "print('Using project root:', PROJECT_ROOT)\n",
     "print('Using data from:', DATA_PATH)\n",
     "raw_df = pd.read_csv(DATA_PATH)\n",
     "print('Raw shape:', raw_df.shape)\n",
-    "raw_df.head()\n"
+    "raw_df.head()"
    ]
   },
   {
