--- a/summative/linear_regression/multivariate.ipynb
+++ b/summative/linear_regression/multivariate.ipynb
@@ -46,7 +46,7 @@
     "import seaborn as sns\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.linear import LinearRegression, SGDRegressor\n",
+    "from sklearn.linear_model import LinearRegression, SGDRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
